- Removed boilerplate JwtDecoder mocks. - Added missing test profile config placeholders. - Removed a few Sonar warnings.