@@ -15,19 +15,15 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.cloud.contract.wiremock.AutoConfigureWireMock;
-import org.springframework.security.oauth2.jwt.JwtDecoder;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit4.SpringRunner;
 import reactor.core.publisher.Mono;
 
-import static com.github.tomakehurst.wiremock.client.WireMock.stubFor;
-import static com.github.tomakehurst.wiremock.client.WireMock.post;
-import static com.github.tomakehurst.wiremock.client.WireMock.urlPathMatching;
-import static com.github.tomakehurst.wiremock.client.WireMock.ok;
+import static com.github.tomakehurst.wiremock.client.WireMock.*;
 import static no.nav.testnav.apps.syntsykemeldingapi.util.TestUtil.getTestPdlPerson;
-import static org.mockito.Mockito.when;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.when;
 
 @ActiveProfiles("test")
 @RunWith(SpringRunner.class)
@@ -35,9 +31,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 @TestPropertySource(locations = "classpath:application-test.yml")
 @AutoConfigureWireMock(port = 0)
 public class PdlProxyConsumerTest {
-
-    @MockBean
-    private JwtDecoder jwtDecoder;
 
     @MockBean
     private TokenExchange tokenService;
@@ -48,22 +41,22 @@ public class PdlProxyConsumerTest {
     @Autowired
     private PdlProxyConsumer pdlProxyConsumer;
 
-    private static final String ident = "01019049945";
-    private static final String pdlProxyUrl = "(.*)/pdl/pdl-api/graphql";
+    private static final String IDENT = "01019049945";
+    private static final String PDL_PROXY_URL = "(.*)/pdl/pdl-api/graphql";
     private PdlPerson pdlResponse;
 
     @Before
     public void before() {
         WireMock.reset();
         when(tokenService.exchange(ArgumentMatchers.any(ServerProperties.class))).thenReturn(Mono.just(new AccessToken("token")));
-        pdlResponse = getTestPdlPerson(ident);
+        pdlResponse = getTestPdlPerson(IDENT);
     }
 
     @Test
     public void shouldGetArbeidsforhold() throws JsonProcessingException {
         stubPdlProxy();
 
-        var response = pdlProxyConsumer.getPdlPerson(ident);
+        var response = pdlProxyConsumer.getPdlPerson(IDENT);
 
         assertThat(response).isNotNull();
         assertThat(response.getErrors()).isEmpty();
@@ -71,11 +64,11 @@ public class PdlProxyConsumerTest {
         assertThat(response.getData().getHentPerson().getFoedsel()).isEmpty();
         assertThat(response.getData().getHentPerson().getNavn()).hasSize(1);
         assertThat(response.getData().getHentIdenter().getIdenter()).hasSize(1);
-        assertThat(response.getData().getHentIdenter().getIdenter().get(0).getIdent()).isEqualTo(ident);
+        assertThat(response.getData().getHentIdenter().getIdenter().getFirst().getIdent()).isEqualTo(IDENT);
     }
 
     private void stubPdlProxy() throws JsonProcessingException {
-        stubFor(post(urlPathMatching(pdlProxyUrl))
+        stubFor(post(urlPathMatching(PDL_PROXY_URL))
                 .willReturn(ok()
                         .withHeader("Content-Type", "application/json")
                         .withBody(objectMapper.writeValueAsString(pdlResponse))));
